[project]
name = "pt-report-to-csv"
version = "0.1.0"
description = ""
authors = [
    {name = "兩大類",email = "marco79423@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
